--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -13,197 +15,380 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 20px;
+            animation: gradientShift 8s ease infinite;
+            background-size: 200% 200%;
+        }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .container {
-            max-width: 900px;
+            max-width: 1000px;
             width: 100%;
+            animation: slideUp 0.8s ease-out;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .header {
             text-align: center;
             color: white;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+            animation: fadeIn 1s ease-out 0.3s both;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         .header h1 {
-            font-size: 2.5em;
+            font-size: 3.5em;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            font-weight: 700;
+            text-shadow: 3px 3px 8px rgba(0,0,0,0.3);
+            letter-spacing: -1px;
         }
 
         .header p {
-            font-size: 1.1em;
-            opacity: 0.95;
+            font-size: 1.3em;
+            opacity: 0.98;
+            font-weight: 300;
+            letter-spacing: 0.5px;
         }
 
         .main-box {
-            background: #ffffff;
-            border-radius: 15px;
+            background: white;
+            border-radius: 25px;
             overflow: hidden;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255,255,255,0.2);
+            animation: popIn 0.8s cubic-bezier(0.34, 1.56, 0.64, 1) 0.2s both;
+        }
+
+        @keyframes popIn {
+            from {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
 
         .map-preview {
             width: 100%;
-            min-height: 300px;
-            background: linear-gradient(135deg, #e0e0e0 0%, #f5f5f5 100%);
+            min-height: 350px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
-            overflow-y: auto;
-            padding: 20px;
+            overflow: hidden;
+            padding: 30px;
+        }
+
+        .map-preview::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="20" cy="20" r="2" fill="white" opacity="0.1"/><circle cx="80" cy="80" r="2" fill="white" opacity="0.1"/></svg>');
+            opacity: 0.5;
+            pointer-events: none;
         }
 
         .map-preview img {
             max-width: 100%;
             height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 15px;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+            position: relative;
+            z-index: 1;
+            transition: transform 0.3s ease;
         }
 
-        .map-preview-placeholder {
-            text-align: center;
-            color: #999;
-        }
-
-        .map-preview-placeholder i {
-            font-size: 3em;
-            margin-bottom: 10px;
+        .map-preview img:hover {
+            transform: scale(1.05);
         }
 
         .content {
-            padding: 40px;
+            padding: 50px 45px;
         }
 
         .content h2 {
-            color: #667eea;
-            margin-bottom: 20px;
-            font-size: 1.8em;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 25px;
+            font-size: 2.2em;
+            font-weight: 700;
         }
 
         .description {
             color: #555;
-            line-height: 1.8;
-            margin-bottom: 20px;
+            line-height: 1.9;
+            margin-bottom: 25px;
             text-align: justify;
+            font-size: 1.05em;
+            font-weight: 300;
+            letter-spacing: 0.3px;
         }
 
         .info-section {
-            background: #f8f9fa;
-            padding: 25px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            border-left: 4px solid #667eea;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e9ecef 100%);
+            padding: 30px;
+            border-radius: 15px;
+            margin-bottom: 30px;
+            border-left: 6px solid;
+            border-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%) 1;
+            transition: all 0.3s ease;
+        }
+
+        .info-section:hover {
+            transform: translateX(5px);
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.15);
+        }
+
+        .info-section h3 {
+            font-size: 1.3em;
+            margin-bottom: 15px;
+            font-weight: 600;
         }
 
         .info-item {
-            margin-bottom: 10px;
-            color: #333;
+            margin-bottom: 12px;
+            color: #444;
+            font-size: 1.05em;
         }
 
         .info-item strong {
-            color: #667eea;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            font-weight: 600;
             display: inline-block;
             width: 140px;
         }
 
-        .upload-section {
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+
+        .feature-card {
+            background: linear-gradient(135deg, #f5f7fa 0%, #e9ecef 100%);
+            padding: 25px;
+            border-radius: 15px;
+            text-align: center;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+            cursor: pointer;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-8px);
+            border-color: #667eea;
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.2);
+        }
+
+        .feature-icon {
+            font-size: 2.5em;
+            margin-bottom: 12px;
+            display: block;
+        }
+
+        .feature-card h4 {
+            color: #667eea;
+            font-size: 1.1em;
+            margin-bottom: 10px;
+            font-weight: 600;
+        }
+
+        .feature-card p {
+            color: #666;
+            font-size: 0.95em;
+            line-height: 1.6;
+        }
+
+        .divider {
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #667eea, transparent);
+            margin: 30px 0;
+        }
+
+        .stats-section {
+            display: flex;
+            justify-content: space-around;
+            margin: 30px 0;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .stat-item {
+            text-align: center;
+            flex: 1;
+            min-width: 120px;
+        }
+
+        .stat-number {
+            font-size: 2.5em;
+            font-weight: 700;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .stat-label {
+            color: #666;
+            font-size: 0.95em;
+            margin-top: 8px;
+            font-weight: 500;
+        }
+
+        .tags-section {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
             margin: 25px 0;
             padding: 20px;
-            background: #f0f4ff;
-            border-radius: 10px;
-            border: 2px dashed #667eea;
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%);
+            border-radius: 12px;
         }
 
-        .upload-section label {
-            display: block;
-            margin-bottom: 10px;
-            color: #333;
-            font-weight: bold;
+        .tag {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: 0.9em;
+            font-weight: 500;
+            animation: tagPulse 2s ease-in-out infinite;
         }
 
-        .upload-section input[type="file"] {
-            display: block;
-            margin-bottom: 10px;
-            padding: 8px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            width: 100%;
-        }
+        .tag:nth-child(2) { animation-delay: 0.2s; }
+        .tag:nth-child(3) { animation-delay: 0.4s; }
+        .tag:nth-child(4) { animation-delay: 0.6s; }
+        .tag:nth-child(5) { animation-delay: 0.8s; }
 
-        .preview-img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-top: 15px;
-            display: none;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.15);
-            border: 2px solid #667eea;
+        @keyframes tagPulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
         }
 
         .button-group {
             display: flex;
-            gap: 15px;
-            margin-top: 30px;
+            gap: 20px;
+            margin-top: 40px;
             flex-wrap: wrap;
             justify-content: center;
         }
 
         .btn {
-            padding: 15px 40px;
+            padding: 18px 50px;
             border: none;
-            border-radius: 30px;
-            font-weight: bold;
-            font-size: 1em;
+            border-radius: 50px;
+            font-weight: 600;
+            font-size: 1.1em;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
             text-decoration: none;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
+            gap: 12px;
+            position: relative;
+            overflow: hidden;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255,255,255,0.3);
+            transition: left 0.4s ease;
+            z-index: -1;
+        }
+
+        .btn:hover::before {
+            left: 100%;
         }
 
         .btn-primary {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
         }
 
         .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
+            transform: translateY(-3px);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.6);
         }
 
-        .btn-secondary {
-            background: #f0f0f0;
-            color: #667eea;
-            border: 2px solid #667eea;
-        }
-
-        .btn-secondary:hover {
-            background: #667eea;
-            color: white;
+        .btn-primary:active {
+            transform: translateY(-1px);
         }
 
         .footer {
             text-align: center;
-            margin-top: 20px;
-            color: #999;
-            font-size: 0.9em;
+            margin-top: 30px;
+            color: rgba(255,255,255,0.9);
+            font-size: 0.95em;
+            font-weight: 300;
+            animation: fadeIn 1.5s ease-out 0.8s both;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 768px) {
             .header h1 {
+                font-size: 2.5em;
+            }
+
+            .header p {
+                font-size: 1.1em;
+            }
+
+            .content {
+                padding: 35px 25px;
+            }
+
+            .content h2 {
                 font-size: 1.8em;
+            }
+
+            .info-section {
+                padding: 20px;
             }
 
             .button-group {
@@ -211,7 +396,25 @@
             }
 
             .btn {
-                min-width: 100%;
+                width: 100%;
+                min-height: 50px;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .header h1 {
+                font-size: 2em;
+            }
+
+            .map-preview {
+                min-height: 250px;
+                padding: 20px;
+            }
+
+            .info-item strong {
+                display: block;
+                width: 100%;
+                margin-bottom: 5px;
             }
         }
     </style>
@@ -241,7 +444,7 @@
                 </p>
 
                 <div class="info-section">
-                    <h3 style="color: #667eea; margin-bottom: 15px;">📋 Identitas Pembuat</h3>
+                    <h3 style="color: #667eea; margin-bottom: 15px;">Identitas Pembuat</h3>
                     <div class="info-item"><strong>Nama:</strong> Khodijah Hasim M.</div>
                     <div class="info-item"><strong>NIM:</strong> 23201036</div>
                     <div class="info-item"><strong>Program Studi:</strong> Teknik Informatika</div>
